@@ -1,14 +1,12 @@
 package leetcode.editor.cn;
 
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 
 public class B_CombinationSum {
     public static void main(String[] args) {
         Solution solution = new B_CombinationSum().new Solution();
-        for (List<Integer> list : solution.combinationSum(new int[]{2, 3, 6, 7}, 7)) {
+        for (List<Integer> list : solution.combinationSum(new int[]{2, 3, 5}, 8)) {
             System.out.println(list);
         }
 
@@ -21,13 +19,13 @@ public class B_CombinationSum {
 
         public List<List<Integer>> combinationSum(int[] candidates, int target) {
             Arrays.sort(candidates);
-            this.target = target;
             res = new ArrayList<>();
-            dfs(candidates, 0, 0, new ArrayList<>());
+            this.target = target;
+            dfs(candidates, 0, 0, new LinkedList<>());
             return res;
         }
 
-        void dfs(int[] candidates, int curSum, int start, List<Integer> subRes) {
+        void dfs(int[] candidates, int curSum, int start, Deque<Integer> subRes) {
             if (curSum == target) {
                 res.add(new ArrayList<>(subRes));
                 return;
@@ -35,9 +33,13 @@ public class B_CombinationSum {
 
             for (int i = start; i < candidates.length; i++) {
                 if (curSum + candidates[i] <= target) {
+                    //作出选择
                     subRes.add(candidates[i]);
-                    dfs(candidates, curSum + candidates[i], i, subRes); //i之前的元素在下一层不再组合
-                    subRes.remove(subRes.size() - 1);
+                    dfs(candidates, curSum + candidates[i], i, subRes);  //i之前的元素在下一层不再选择
+                    //撤销选择
+                    subRes.removeLast();
+                } else {
+                    return;
                 }
             }
         }
